# Empathy-Technologies

./: README.md
examples/: graph.dot  staedte.dot
graphLib/: Makefile  graph.cpp  graph.h  tao.cpp
graphPallet/: Cargo.toml  README.md
graphPallet/node/: Cargo.toml
graphPallet/node/src/: lib.rs
graphPallet/pallets/dijkstra/: Cargo.toml
graphPallet/pallets/dijkstra/src/: graph.rs  lib.rs  test.rs
graphPallet/runtime/src/: lib.rs  lib.rs.withoutTest
pallet-graphAlgorithms/: README.md
pallet-graphAlgorithms/src/: graph.rs  lib.rs
rust/crates/graph/src/: graph.rs
rust/lernpfad/: Cargo.toml
rust/lernpfad/src/: graph.rs  main.rs
rust/pallets/shortest_path_pallet/src/: graph.rs
rust/runtime/src/: graph.rs
