[package]
name = "pallet-dijkstra"
version = "0.1.0"
authors = ["Your Name <your.email@example.com>"]
edition = "2018"
license = "Unlicense"
publish = false

[dependencies]
frame-support = { version = "3.0.0", default-features = false }
frame-system = { version = "3.0.0", default-features = false }
sp-runtime = { version = "3.0.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
regex = "1.5"

[features]
default = ["std"]
std = []

