[package]
name = "pallet-minimal-template"
description = "A minimal pallet built with FRAME, part of Polkadot Sdk."
version = "0.1.0"
license = "Unlicense"
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
polkadot-sdk = { workspace = true, features = ["experimental", "runtime"], default-features = false }
frame-support = { version = "4.0", default-features = false, features = ["std"] }
frame-system = { version = "4.0", default-features = false, features = ["std"] }
#sp-std = { version = "4.0", default-features = false }

[features]
default = ["std"]
std = [
#	"codec/std", 
	"polkadot-sdk/std", 
#	"scale-info/std",
    "frame-support/std",
    "frame-system/std",
#    "sp-std/std",
#    "pallet-minimal-template/std"
]
